added content for mission and values

--- a/public/mission/index.html
+++ b/public/mission/index.html
@@ -101,8 +101,7 @@
                     href="https://statechannels.discourse.group/">forum.</a>
                 </li>
                 <li>
-                  <a class="nav__dropdown__item" target="_blank"
-                    href="mailto:research@magmo.com">email.</a>
+                  <a class="nav__dropdown__item" target="_blank" href="mailto:research@magmo.com">email.</a>
                 </li>
               </ul>
           </nav>
@@ -125,7 +124,8 @@
             contact.
           </div>
           <ul>
-            <a class="mobile-menu__item__sub" target="_blank" href="https://join.slack.com/t/statechannels/shared_invite/zt-y2hs9xde-GX8oUIWmnjo1JYDUlgST2A">slack.</a>
+            <a class="mobile-menu__item__sub" target="_blank"
+              href="https://join.slack.com/t/statechannels/shared_invite/zt-y2hs9xde-GX8oUIWmnjo1JYDUlgST2A">slack.</a>
             <a class="mobile-menu__item__sub" target="_blank" href="https://statechannels.discourse.group/">forum.</a>
             <a class="mobile-menu__item__sub" target="_blank" href="mailto:research@magmo.com">email.</a>
           </ul>
@@ -145,7 +145,51 @@
 
             <h2 class="hero__heading">Mission</h2>
             <p class="hero__body">
-              Insert mission statement here
+              Magmo is a team of humble R&D engineers friends, willing to take risks developing, germinating,
+              and grooming stretch-goal research ideas with a focus on scaling Ethereum
+            </p>
+          </div>
+
+        </div>
+
+        <div class="container">
+
+          <div class="current">
+
+            <h2 class="hero__heading">Values</h2>
+            <ul>
+              <li class="hero__body__list__header">
+                We:
+              </li>
+              <li class="hero__body__unordered__list">
+                Work on open-source, public goods research projects </li>
+              <li class="hero__body__unordered__list">
+                Indiscriminately aim to improve layer 2 technologies</li>
+              <li class="hero__body__unordered__list">
+                Focus on user pain points, without sacrificing security
+              </li>
+              <li class="hero__body__unordered__list">
+                Invite conversation with anyone, and collaborate </li>
+            </ul>
+            <br>
+            <ul>
+              <li class="hero__body__list__header">
+                We don't:
+              </li>
+              <li class="hero__body__unordered__list">
+                Have egos about credit: our ideas are your ideas </li>
+              <li class="hero__body__unordered__list">
+                Aim to commercialize our output: your success is our success</li>
+            </ul>
+            <br>
+            <br>
+            <p class="hero__subheading__right">
+              Join us in our <a target="_blank" class="hero__cta"
+                href="https://statechannels.discourse.group/">discourse forum</a>!
+              <br>
+              Or drop by our <a target="_blank" class="hero__cta"
+                href="https://join.slack.com/t/statechannels/shared_invite/zt-y2hs9xde-GX8oUIWmnjo1JYDUlgST2A">slack
+                community</a>!
             </p>
           </div>
 
