--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -158,8 +158,8 @@
               We will be announcing a new whitepaper soon!
               <br>
               We are developing the <b>Stingy Asymmetric Fast Exit (SAFE) </b> protocol, which aims to
-              drasticually reduce the cost for withdrawing funds from layer 2 systems (such as an optimistic roll-up)
-              to a layer 1 system (such as Ethereum mainnet) while maintaining trustlessness and security.
+              drastically reduce the cost for moving funds from a cheap chain (such as an optimistic roll-up)
+              to an expensive chain (such as Ethereum mainnet) while maintaining trustlessness and security. Thus, this protocol would provide cheaper "fast exits" from ORUs to mainnet.
             </p>
             <br>
           </div>
