Removed unncessary css
- removed unncessary css
- formatted html pages
- added strikethrough formatting to the mission statement

--- a/public/index.html
+++ b/public/index.html
@@ -77,29 +77,33 @@
                   <a class="nav__dropdown__papers__item">Nitro V2 (Coming Soon!)</a>
                 </li>
                 <li>
-                  <a class="nav__dropdown__papers__item" target="_blank" href="https://magmo.com/force-move-games.pdf">Force
+                  <a class="nav__dropdown__papers__item" target="_blank"
+                    href="https://magmo.com/force-move-games.pdf">Force
                     Move Games</a>
                 </li>
                 <li>
-                  <a class="nav__dropdown__papers__item" target="_blank" href="https://magmo.com/nitro-protocol.pdf">Nitro
+                  <a class="nav__dropdown__papers__item" target="_blank"
+                    href="https://magmo.com/nitro-protocol.pdf">Nitro
                     Protocol</a>
                 </li>
               </ul>
             </li>
             <a class="nav__right__item" href="/projects">projects.</a>
             <li class="nav__dropdown">
-            <a class="nav__right__item">contact.</a>
-            <ul class="nav__dropdown__list">
-              <li>
-                <a class="nav__dropdown__item" target="_blank" href="https://join.slack.com/t/statechannels/shared_invite/zt-y2hs9xde-GX8oUIWmnjo1JYDUlgST2A">slack.</a>
-              </li>
-              <li>
-                <a class="nav__dropdown__item" target="_blank" href="https://statechannels.discourse.group/">forum.</a>
-              </li>
-              <li>
-                <a class="nav__dropdown__item" target="_blank" href="mailto:research@magmo.com">email.</a>
-              </li>
-            </ul>
+              <a class="nav__right__item">contact.</a>
+              <ul class="nav__dropdown__list">
+                <li>
+                  <a class="nav__dropdown__item" target="_blank"
+                    href="https://join.slack.com/t/statechannels/shared_invite/zt-y2hs9xde-GX8oUIWmnjo1JYDUlgST2A">slack.</a>
+                </li>
+                <li>
+                  <a class="nav__dropdown__item" target="_blank"
+                    href="https://statechannels.discourse.group/">forum.</a>
+                </li>
+                <li>
+                  <a class="nav__dropdown__item" target="_blank" href="mailto:research@magmo.com">email.</a>
+                </li>
+              </ul>
           </nav>
 
           <!-- forum href="https://research.statechannels.org"-->
@@ -123,8 +127,9 @@
             contact.
           </div>
           <ul>
-          <a class="mobile-menu__item__sub" target="_blank" href="https://join.slack.com/t/statechannels/shared_invite/zt-y2hs9xde-GX8oUIWmnjo1JYDUlgST2A">slack.</a>
-          <a class="mobile-menu__item__sub" target="_blank" href="https://statechannels.discourse.group/">forum.</a>
+            <a class="mobile-menu__item__sub" target="_blank"
+              href="https://join.slack.com/t/statechannels/shared_invite/zt-y2hs9xde-GX8oUIWmnjo1JYDUlgST2A">slack.</a>
+            <a class="mobile-menu__item__sub" target="_blank" href="https://statechannels.discourse.group/">forum.</a>
           </ul>
         </div>
       </div>
