--- a/public/mission/index.html
+++ b/public/mission/index.html
@@ -145,7 +145,7 @@
 
             <h2 class="hero__heading">Mission</h2>
             <p class="hero__body">
-              Magmo is a team of humble R&D engineers friends, willing to take risks developing, germinating,
+              Magmo is a team of humble <s>R&D engineers</s> friends, willing to take risks developing, germinating,
               and grooming stretch-goal research ideas with a focus on scaling Ethereum
             </p>
           </div>
