--- a/public/index.html
+++ b/public/index.html
@@ -76,29 +76,33 @@
                   <a class="nav__dropdown__papers__item">Nitro V2 (Coming Soon!)</a>
                 </li>
                 <li>
-                  <a class="nav__dropdown__papers__item" target="_blank" href="https://magmo.com/force-move-games.pdf">Force
+                  <a class="nav__dropdown__papers__item" target="_blank"
+                    href="https://magmo.com/force-move-games.pdf">Force
                     Move Games</a>
                 </li>
                 <li>
-                  <a class="nav__dropdown__papers__item" target="_blank" href="https://magmo.com/nitro-protocol.pdf">Nitro
+                  <a class="nav__dropdown__papers__item" target="_blank"
+                    href="https://magmo.com/nitro-protocol.pdf">Nitro
                     Protocol</a>
                 </li>
               </ul>
             </li>
             <a class="nav__right__item" href="/projects">projects.</a>
             <li class="nav__dropdown">
-            <a class="nav__right__item">contact.</a>
-            <ul class="nav__dropdown__list">
-              <li>
-                <a class="nav__dropdown__item" target="_blank" href="https://join.slack.com/t/statechannels/shared_invite/zt-zih4tmlg-tYwvMC2rjF0K4nHiomlkmQ">slack.</a>
-              </li>
-              <li>
-                <a class="nav__dropdown__item" target="_blank" href="https://statechannels.discourse.group/">forum.</a>
-              </li>
-              <li>
-                <a class="nav__dropdown__item" target="_blank" href="mailto:research@magmo.com">email.</a>
-              </li>
-            </ul>
+              <a class="nav__right__item">contact.</a>
+              <ul class="nav__dropdown__list">
+                <li>
+                  <a class="nav__dropdown__item" target="_blank"
+                    href="https://join.slack.com/t/statechannels/shared_invite/zt-zih4tmlg-tYwvMC2rjF0K4nHiomlkmQ">slack.</a>
+                </li>
+                <li>
+                  <a class="nav__dropdown__item" target="_blank"
+                    href="https://statechannels.discourse.group/">forum.</a>
+                </li>
+                <li>
+                  <a class="nav__dropdown__item" target="_blank" href="mailto:research@magmo.com">email.</a>
+                </li>
+              </ul>
           </nav>
 
           <!-- forum href="https://research.statechannels.org"-->
@@ -114,6 +118,32 @@
 
         <div class="mobile-menu mobile-only">
           <button class="mobile-menu__close">close</button>
+          <!--input type="checkbox" id="drop" /-->
+          <ul>
+            <li>
+              <a class="mobile-menu__item" href="/about_us">about us.</a>
+            </li>
+            <li class ="mobile-menu__item">
+              <a class="mobile-menu__item" href="/papers">papers.</a>
+            </li>
+            <li class = "mobile-menu__item">
+              <a class="mobile-menu__item" href="/projects">projects.</a>
+            </li>
+            <li class = "mobile-menu__item">
+              <label for="drop" class="toggle">contact +</label>
+              <!--a href="#">contact</a-->
+              <input type="checkbox" id="drop" />
+
+              <ul class = "mobile-menu__level1">
+                <li><a href="#" class = "mobile-menu__item__sub">slack.</a></li>
+                <li><a href="#" class = "mobile-menu__item__sub">forum.</a></li>
+                <li><a href="#" class = "mobile-menu__item__sub">email.</a></li>
+              </ul>
+
+            </li>
+          </ul>
+
+          <!--
           <a class="mobile-menu__item" href="/about_us">about us.</a>
           <a class="mobile-menu__item" href="/papers">papers.</a>
           <a class="mobile-menu__item" href="/projects">projects.</a>
@@ -121,10 +151,12 @@
             contact.
           </div>
           <ul>
-          <a class="mobile-menu__item__sub" target="_blank" href="https://join.slack.com/t/statechannels/shared_invite/zt-zih4tmlg-tYwvMC2rjF0K4nHiomlkmQ">slack.</a>
-          <a class="mobile-menu__item__sub" target="_blank" href="https://statechannels.discourse.group/">forum.</a>
-          <a class="mobile-menu__item__sub" target="_blank" href="mailto:research@magmo.com">email.</a>
+            <a class="mobile-menu__item__sub" target="_blank"
+              href="https://join.slack.com/t/statechannels/shared_invite/zt-zih4tmlg-tYwvMC2rjF0K4nHiomlkmQ">slack.</a>
+            <a class="mobile-menu__item__sub" target="_blank" href="https://statechannels.discourse.group/">forum.</a>
+            <a class="mobile-menu__item__sub" target="_blank" href="mailto:research@magmo.com">email.</a>
           </ul>
+        -->
         </div>
       </div>
     </div>
