mobile menu dropdown for papers and contact

--- a/public/index.html
+++ b/public/index.html
@@ -123,8 +123,18 @@
             <li>
               <a class="mobile-menu__item" href="/about_us">about us.</a>
             </li>
-            <li class ="mobile-menu__item">
-              <a class="mobile-menu__item" href="/papers">papers.</a>
+            <li class = "mobile-menu__item">
+              <label for="drop-1" class="toggle">papers +</label>
+              <!--a href="#">contact</a-->
+              <input type="checkbox" id="drop-1" />
+
+              <ul class = "mobile-menu__level1">
+                <li class = "mobile-menu__item__sub"><a href="#" class = "mobile-menu__item__sub">paper 1.</a></li>
+                <li class = "mobile-menu__item__sub"><a href="#" class = "mobile-menu__item__sub">paper 2.</a></li>
+                <li class = "mobile-menu__item__sub"><a href="#" class = "mobile-menu__item__sub">paper 3.</a></li>                
+                <li class = "mobile-menu__item__sub"><a href="#" class = "mobile-menu__item__sub">paper 4.</a></li>
+              </ul>
+
             </li>
             <li class = "mobile-menu__item">
               <a class="mobile-menu__item" href="/projects">projects.</a>
@@ -135,9 +145,9 @@
               <input type="checkbox" id="drop" />
 
               <ul class = "mobile-menu__level1">
-                <li><a href="#" class = "mobile-menu__item__sub">slack.</a></li>
-                <li><a href="#" class = "mobile-menu__item__sub">forum.</a></li>
-                <li><a href="#" class = "mobile-menu__item__sub">email.</a></li>
+                <li class = "mobile-menu__item__sub"><a href="#" class = "mobile-menu__item__sub">slack.</a></li>
+                <li class = "mobile-menu__item__sub"><a href="#" class = "mobile-menu__item__sub">forum.</a></li>
+                <li class = "mobile-menu__item__sub"><a href="#" class = "mobile-menu__item__sub">email.</a></li>
               </ul>
 
             </li>
