--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -280,7 +280,10 @@
     </div>
     <!-- End Footer -->
 
-    <script src="/app.js" charset="utf-8"></script>
+  </div>
+  <!-- End Wrapper -->
+
+  <script src="/app.js" charset="utf-8"></script>
 </body>
 
 </html>
