--- a/public/mission/index.html
+++ b/public/mission/index.html
@@ -248,8 +248,10 @@
       </div>
     </div>
     <!-- End Footer -->
+  </div>
+  <!-- End Wrapper -->
 
-    <script src="/app.js" charset="utf-8"></script>
+  <script src="/app.js" charset="utf-8"></script>
 </body>
 
 </html>
