--- a/public/papers/index.html
+++ b/public/papers/index.html
@@ -219,7 +219,10 @@
     </div>
     <!-- End Footer -->
 
-    <script src="/app.js" charset="utf-8"></script>
+  </div>
+  <!-- End Wrapper -->
+
+  <script src="/app.js" charset="utf-8"></script>
 </body>
 
 </html>
