rebase with master

--- a/public/index.html
+++ b/public/index.html
@@ -87,6 +87,7 @@
             <!-- #if desktop -->
             <nav class="nav__right mobile-off">
               <a class="nav__right__item" href="/about_us">about us.</a>
+              <a class="nav__right__item" href="/mission">mission.</a>
               <li class="nav__dropdown__papers">
                 <a class="nav__right__item">papers.</a>
                 <ul class="nav__dropdown__papers__list">
