--- a/public/about_us/index.html
+++ b/public/about_us/index.html
@@ -89,8 +89,11 @@
                 <a class="nav__right__item">papers.</a>
                 <ul class="nav__dropdown__papers__list">
                   <li>
-                    <a class="nav__dropdown__papers__item"
-                      >SAFE (Coming Soon!)</a
+                    <a
+                      class="nav__dropdown__papers__item"
+                      target="_blank"
+                      href="https://github.com/statechannels/SAFE-protocol/blob/main/doc/SAFE.md"
+                      >Secure Asymmetric Frugal Exchange</a
                     >
                   </li>
                   <li>
@@ -170,7 +173,13 @@
                 <input type="checkbox" id="drop-1" />
 
                 <ul class="mobile-menu__level1">
-                  <li class="mobile-menu__item__sub">SAFE (Soon!).</li>
+                  <li class="mobile-menu__item__sub">
+                    <a
+                      class="mobile-menu__item__sub"
+                      href="https://github.com/statechannels/SAFE-protocol/blob/main/doc/SAFE.md"
+                      >Secure Asymmetric Frugal Exchange</a
+                    >
+                  </li>
                   <li class="mobile-menu__item__sub">Nitro V2 (Soon!).</li>
                   <li class="mobile-menu__item__sub">
                     <a
