Added link to eth research post

--- a/public/index.html
+++ b/public/index.html
@@ -250,6 +250,14 @@
                 <h1 class="callout__content__heading">
                   Bringing scalability to the decentralized web.
                 </h1>
+                <h2 class="callout__content__subheading">
+                  Read our post on Eth Research:
+                  <a
+                    href="https://ethresear.ch/t/optimizing-cross-chain-swaps/11924"
+                  >
+                    <b>Optimizing cross-chain swaps</b>
+                  </a>
+                </h2>
                 <div class="callout__content__buttons">
                   <a class="btn btn--stroke" href="/about_us">about us</a>
                   <a class="btn btn--stroke" href="/projects">projects</a>
