--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -275,12 +275,22 @@
                 We will be announcing a new whitepaper soon!
                 <br />
                 We are developing the
-                <b>Stingy Asymmetric Fast Exit (SAFE) </b> protocol, which aims
-                to drastically reduce the cost for moving funds from a cheap
-                chain (such as an optimistic roll-up) to an expensive chain
-                (such as Ethereum mainnet) while maintaining trustlessness and
-                security. Thus, this protocol would provide cheaper "fast exits"
-                from ORUs to mainnet.
+                <a
+                  target="_blank"
+                  href="https://github.com/statechannels/SAFE-protocol/blob/main/doc/SAFE.md"
+                  >Stingy Asymmetric Fast Exit (SAFE)</a
+                >
+                protocol, which aims to drastically reduce the cost for moving
+                funds from a cheap chain (such as an optimistic roll-up) to an
+                expensive chain (such as Ethereum mainnet) while maintaining
+                trustlessness and security. Thus, this protocol would provide
+                cheaper "fast exits" from ORUs to mainnet. Read our Eth Research
+                post
+                <a
+                  target="_blank"
+                  href="https://ethresear.ch/t/optimizing-cross-chain-swaps/11924"
+                  >Optimizing cross-chain swaps</a
+                >
               </p>
               <br />
             </div>
