swap consensys => mesh logo

--- a/public/about_us/index.html
+++ b/public/about_us/index.html
@@ -312,11 +312,10 @@
                   </a>
                 </div>
                 <div class="team-content__item__logos">
-                  <a href="https://consensys.net/">
-                    <img src="../assets/logos/consensys.svg" alt="Consensys" />
-                  </a>
+                    <a href="https://mesh.xyz/">
+                      <img src="../assets/logos/mesh.png" alt="Consensys">
+                    </a>
                 </div>
-              </div>
             </div>
           </div>
         </div>
