--- a/public/about_us/index.html
+++ b/public/about_us/index.html
@@ -312,10 +312,11 @@
                   </a>
                 </div>
                 <div class="team-content__item__logos">
-                    <a href="https://mesh.xyz/">
-                      <img src="../assets/logos/mesh.png" alt="Consensys Mesh">
-                    </a>
+                  <a href="https://mesh.xyz/">
+                    <img src="../assets/logos/mesh.png" alt="Consensys Mesh" />
+                  </a>
                 </div>
+              </div>
             </div>
           </div>
         </div>
