modify about us line

--- a/public/about_us/index.html
+++ b/public/about_us/index.html
@@ -181,9 +181,9 @@
             <div class="hero">
               <h2 class="hero__heading">About Us</h2>
               <p class="hero__body">
-                We are a team of researchers working on state channels, the
-                scaling solution that enables high frequency state exchanges for
-                the decentralized web.
+                We are a team of researchers and developers who work at
+                <a href="https://www.mesh.xyz/research">Consensys Mesh</a>. We
+                work on state channels and other blockchain scaling solutions.
               </p>
             </div>
 
