--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -182,139 +182,32 @@
         <div class="section section--statechannels">
           <div class="container">
             <div class="current">
-              <h2 class="hero__heading">Current Projects</h2>
-
+              <h2 class="hero__heading">Projects</h2>
+              <h3 class="hero__subheading">
+                <a href="https://statechannels.org/" alt="statechannels.org">
+                  <img src="../assets/logos/statechannels.svg" alt="statechannels.org" width="200px"></image>
+                </a>
+              </h3>
               <p class="hero__body">
-                Main contributors to State Channels, an open source project in
-                pursuit of a single standard that enables a fully interoperable
-                ecosystem of State Channel applications. Learn more at
+                Magmo are core maintainers of
                 <a
                   target="_blank"
                   class="hero__cta"
                   href="https://www.statechannels.org/"
                   >statechannels.org</a
-                >!
+                >. Follow the link for research papers, docs, code, blogs and
+                discussion forums!
               </p>
+              <h3 class="hero__subheading">Optimistic rollups</h3>
               <p class="hero__body">
-                With support from Filecoin Grants, we are developing Nitro
-                protocol in golang for use in the Filecoin ecosystem. This work
-                lays the foundation of utilizing virtual channels in the
-                Retrieval Market. Check out our
-                <a
-                  class="hero__cta"
-                  href="https://github.com/filecoin-project/devgrants/issues/348"
-                  >grant proposal</a
-                >.
-              </p>
-              <p class="hero__body">
-                We will be announcing a new whitepaper soon!
-                <br />
-                We are developing the
-                <b>Stingy Asymmetric Fast Exit (SAFE) </b> protocol, which aims
+                We developed the
+                <a href="https://github.com/statechannels/SAFE-protocol/blob/main/doc/SAFE.md"><b>Stingy Asymmetric Fast Exit (SAFE) </b> protocol</a>, which aims
                 to drastically reduce the cost for moving funds from a cheap
                 chain (such as an optimistic roll-up) to an expensive chain
                 (such as Ethereum mainnet) while maintaining trustlessness and
-                security. Thus, this protocol would provide cheaper "fast exits"
-                from ORUs to mainnet.
+                security
               </p>
               <br />
-            </div>
-          </div>
-          <div class="container">
-            <div class="past">
-              <h2 class="hero__heading">State Channel Applications</h2>
-
-              <p class="hero__body">
-                Here at Magmo, we are working towards our goal of building state
-                channel networks, where users can interact off-chain with
-                security — but with minimal cost and latency. To stress-test our
-                protocols and other software, we build applications that utilize
-                them.
-              </p>
-              <p class="hero__body">
-                To showcase the value of state channels, we built a proof of
-                concept:
-              </p>
-              <p class="hero__body__middle">
-                <a
-                  href="https://web3torrent.statechannels.org/"
-                  alt="Web3Torrent"
-                >
-                  <image
-                    class="app__logos"
-                    src="https://web3torrent.statechannels.org/assets/logo.svg"
-                  />
-                </a>
-              </p>
-
-              <p class="hero__body">
-                This browser based torrenting client demonstates the use of peer
-                to peer state channel relationships, high frequency messaging
-                and the ability to incentivize filesharing using micropayments.
-                To learn more, read the accompanying
-                <a
-                  target="_blank"
-                  class="hero__cta"
-                  href="https://blog.statechannels.org/introducing-web3torrent/"
-                  >blog post</a
-                >.
-              </p>
-              <br />
-              <p class="hero__body">
-                We've also built other simple and fun applications based off
-                some well known games:
-              </p>
-              <ul>
-                <li class="hero__body__list">
-                  <a
-                    class="hero__cta"
-                    target="_blank"
-                    href="https://rps.magmo.com/"
-                    >Rock Paper Scissors</a
-                  >
-                </li>
-                <li class="hero__body__list">
-                  <a
-                    class="hero__cta"
-                    target="_blank"
-                    href="https://ttt.magmo.com/"
-                    >Tic Tac Toe</a
-                  >
-                </li>
-              </ul>
-
-              <p class="hero__body">
-                The process of building these application, as well as feedback
-                we get from gamers and devs, is a great opportunity to learn how
-                we could be doing things differently or better.
-              </p>
-              <br />
-              <p class="hero__subheading__right">
-                Check out our
-                <a
-                  target="_blank"
-                  class="hero__cta"
-                  href="https://github.com/statechannels/apps"
-                  >github</a
-                >
-                repository!
-                <br />
-                Let us know what you're building through our
-                <a
-                  target="_blank"
-                  class="hero__cta"
-                  href="https://statechannels.discourse.group/"
-                  >discourse forum</a
-                >!
-                <br />
-                Or drop by our
-                <a
-                  target="_blank"
-                  class="hero__cta"
-                  href="https://join.slack.com/t/statechannels/shared_invite/zt-zih4tmlg-tYwvMC2rjF0K4nHiomlkmQ"
-                  >slack community</a
-                >!
-              </p>
             </div>
           </div>
         </div>
