remove incorrect closing tag

--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -185,7 +185,11 @@
               <h2 class="hero__heading">Projects</h2>
               <h3 class="hero__subheading">
                 <a href="https://statechannels.org/" alt="statechannels.org">
-                  <img src="../assets/logos/statechannels.svg" alt="statechannels.org" width="200px"></image>
+                  <img
+                    src="../assets/logos/statechannels.svg"
+                    alt="statechannels.org"
+                    width="200px"
+                  />
                 </a>
               </h3>
               <p class="hero__body">
@@ -201,11 +205,13 @@
               <h3 class="hero__subheading">Optimistic rollups</h3>
               <p class="hero__body">
                 We developed the
-                <a href="https://github.com/statechannels/SAFE-protocol/blob/main/doc/SAFE.md"><b>Stingy Asymmetric Fast Exit (SAFE) </b> protocol</a>, which aims
-                to drastically reduce the cost for moving funds from a cheap
-                chain (such as an optimistic roll-up) to an expensive chain
-                (such as Ethereum mainnet) while maintaining trustlessness and
-                security
+                <a
+                  href="https://github.com/statechannels/SAFE-protocol/blob/main/doc/SAFE.md"
+                  ><b>Stingy Asymmetric Fast Exit (SAFE) </b> protocol</a
+                >, which aims to drastically reduce the cost for moving funds
+                from a cheap chain (such as an optimistic roll-up) to an
+                expensive chain (such as Ethereum mainnet) while maintaining
+                trustlessness and security
               </p>
               <br />
             </div>
