--- a/public/about_us/index.html
+++ b/public/about_us/index.html
@@ -228,6 +228,14 @@
                     />
                   </a>
                 </div>
+                <div class="team-content__item__logos">
+                  <a href="https://fil.org/">
+                    <img
+                      src="../assets/logos/filecoin-foundation.png"
+                      alt="Filecoin Foundation"
+                    />
+                  </a>
+                </div>
               </div>
             </div>
           </div>
