replace png with svg

--- a/public/about_us/index.html
+++ b/public/about_us/index.html
@@ -220,10 +220,11 @@
                     <img src="../assets/logos/mesh.png" alt="Consensys Mesh" />
                   </a>
                 </div>
+
                 <div class="team-content__item__logos">
                   <a href="https://fil.org/">
                     <img
-                      src="../assets/logos/filecoin-foundation.png"
+                      src="../assets/logos/filecoin-foundation.svg"
                       alt="Filecoin Foundation"
                     />
                   </a>
