--- a/public/index.html
+++ b/public/index.html
@@ -185,7 +185,14 @@
                   transform="translate(-4 -2)"
                 />
               </svg>
-              <p class="footer__left__text">Copyright © 2022 Magmo Team</p>
+              <div id="copyright"></div>
+              <script>
+                const paragraph = `
+                <p class="footer__left__text">
+                  Copyright &copy; ${new Date().getFullYear()} Magmo Team
+                </p>`;
+                document.getElementById("copyright").innerHTML = paragraph;
+              </script>
             </div>
 
             <div class="footer__right">
