--- a/public/index_chinese/index.html
+++ b/public/index_chinese/index.html
@@ -955,9 +955,14 @@
                   transform="translate(-140.84 -264.15)"
                 />
               </svg>
-              <p class="footer__left__text">
-                Copyright © 2021 State Channels contributors
-              </p>
+              <div id="copyright"></div>
+              <script>
+                const paragraph = `
+                <p class="footer__left__text">
+                  Copyright &copy; ${new Date().getFullYear()} Magmo Team
+                </p>`;
+                document.getElementById("copyright").innerHTML = paragraph;
+              </script>
             </div>
 
             <div class="footer__right">
