replace job link address

--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -229,7 +229,7 @@
         </div>
       </div>
       <div class="callout-banner">
-        <a href="https://boards.greenhouse.io/consensysinc/jobs/4602604004">
+        <a href="https://statechannels.org/careers/">
           We're hiring: apply now!</a
         >
       </div>
