add Sam Stokes team member

--- a/public/about_us/index.html
+++ b/public/about_us/index.html
@@ -197,6 +197,15 @@
                   </div>
                 </div>
 
+                <div class="team-content__item__logos__item">
+                  <a href="https://github.com/bitwiseguy">
+                    <img src="../assets/people/sam.png" />
+                    <ul class="member-list">
+                      <li>Sam Stokes</li>
+                    </ul>
+                  </a>
+                </div>
+
                 <div class="team-content__item__contributors">
                   <h3 class="team-content__item__contributors__title">
                     Alumni & Part-Time Contributors
