--- a/public/about_us/index.html
+++ b/public/about_us/index.html
@@ -179,7 +179,7 @@
                   </div>
 
                   <div class="team-content__item__logos__item">
-                    <a href="https://github.com/lalexgap">
+                    <a href="www.alexgap.ca">
                       <img src="../assets/people/alex.png" />
                       <ul class="member-list">
                         <li>Alex Gap</li>
