add hackathon entries

--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -182,6 +182,18 @@
                 trustlessness and security
               </p>
               <br />
+              <h3 class="hero__subheading">Hackathon projects</h3>
+              <p class="hero__body">
+                We developed the following prize winning projects:
+                <a
+                  href="https://ethglobal.com/showcase/l2-exit-format-b3qbh"
+                  ><b>L2 Exit Format</b></a
+                > and  <a
+                href="https://ethglobal.com/showcase/scbridgeaccount-ivyas"
+                ><b>Smart Contract Bridge Account.</b></a
+              > 
+              </p>
+              <br />
             </div>
           </div>
         </div>
