add dispute games link

--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -179,8 +179,9 @@
                 >, which aims to drastically reduce the cost for moving funds
                 from a cheap chain (such as an optimistic roll-up) to an
                 expensive chain (such as Ethereum mainnet) while maintaining
-                trustlessness and security
+                trustlessness and security.
               </p>
+              <p>We also worked on <a href="https://blog.statechannels.org/dispute-game/">dispute games.</a></p>
               <br />
               <h3 class="hero__subheading">Hackathon projects</h3>
               <p class="hero__body">
