close tag properly

--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -182,8 +182,8 @@
                 trustlessness and security.
                 <br />
                 We also worked on
-                <a href="https://blog.statechannels.org/dispute-game/" />dispute
-                games.
+                <a href="https://blog.statechannels.org/dispute-game/" >dispute
+                games</a>.
               </p>
               <br />
               <h3 class="hero__subheading">Hackathon projects</h3>
